--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -116,57 +116,6 @@
     justify-content: center;
     align-items: center;
     padding: 3rem 2rem;
-
-    div {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      padding: 2rem;
-      background-color: black;
-      border: 0.2rem solid $arcade;
-      border-radius: 1rem;
-      box-shadow: 0px 40px 100px -20px rgba(55, 37, 146, 0.75);
-      overflow-y: scroll;
-
-      .card-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        gap: 6rem;
-        margin-top: 4rem;
-      }
-
-      .card {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        gap: 1rem;
-        width: 20rem;
-        height: 24rem;
-        background: linear-gradient(to bottom, #09010f, #9f00ff);
-        overflow-y: hidden;
-      }
-
-      .card-name {
-        font-size: 2rem;
-        font-weight: bold;
-        text-align: center;
-      }
-
-      .card_date {
-        font-size: 1.1rem;
-      }
-
-      .card-image {
-        width: 20rem;
-        height: 15rem;
-        object-fit: cover;
-      }
-    }
   }
 
   &__btn-container {
@@ -280,9 +229,9 @@ $push-size: 10rem;
   }
 }
 
-.arcade__screen div {
-  overflow-y: scroll;
-}
+// .arcade__screen div {
+//   overflow-y: scroll;
+// }
 
 .arcade__screen div::-webkit-scrollbar {
   width: 12px;
