--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "PixelEmulator"; /* Nom de la police que tu vas utiliser */
-  src: url("./assets/fonts/PixelEmulator-xq08.ttf") format("truetype");
+  src: url("../assets/fonts/PixelEmulator-xq08.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
