--- a/src/styles/GameCard.scss
+++ b/src/styles/GameCard.scss
@@ -1,10 +1,10 @@
-.card-container {
+.card-container-favorites {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 6rem;
-  margin-top: 8rem;
+  height: 100%;
 }
 
 .card {
