--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -20,13 +20,14 @@
     gap: 2rem;
   }
 
-  .card-container {
+  .card-container-home {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 6rem;
     margin-top: 8rem;
+    height: 100%;
   }
 
   .btn-favorites {
