--- a/src/styles/GameCard.scss
+++ b/src/styles/GameCard.scss
@@ -17,6 +17,7 @@
   height: 30rem;
   background: linear-gradient(to bottom, #09010f, #9f00ff);
   overflow-y: hidden;
+  border-radius: 1rem;
 }
 
 .card-name {
